welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:8: error: identifier expected but integer literal found.
  T[1]=1;
    ^golomb:8: error: ']' expected but ';' found.
  T[1]=1;
        ^golomb:9: error: identifier expected but integer literal found.
  T[2]=2;
    ^golomb:9: error: ']' expected but ';' found.
  T[2]=2;
        ^golomb:10: error: identifier expected but integer literal found.
  T[3]=2;
    ^golomb:10: error: ']' expected but ';' found.
  T[3]=2;
        ^golomb:15: error: ';' expected but '=' found.
      T[i]=c;
          ^golomb:19: error: illegal start of simple pattern
  }
  ^